especificacion de transporte para producto implementado
